[tool.poetry]
name = "test"
version = "0.1.0"
description = ""
authors = ["Onzeka <email_id>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
ipykernel = "^6.6.0"
pandas = "^1.3.5"
altair = "^4.1.0"
numpy = "^1.21.4"
sklearn = "^0.0"
scipy = "^1.7.3"
statsmodels = "^0.13.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
